--- a/.github/workflows/mk_docs.yml
+++ b/.github/workflows/mk_docs.yml
@@ -28,8 +28,14 @@ jobs:
     - name: execute py script # run the run.py to get the latest data
       run: |
          python website_scripts/mk_docs.py
-    - name: push changes
-      uses: ad-m/github-push-action@v0.6.0
+#    - name: push changes
+#      uses: ad-m/github-push-action@v0.6.0
+#      with:
+#        github_token: ${{ secrets.GITHUB_TOKEN }}
+#        repository:  simplesamlphp/simplesamlphp.github.io 
+    - name: Deploy
+      uses: peaceiris/actions-gh-pages@v3
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         repository:  simplesamlphp/simplesamlphp.github.io 
+        publish_dir: ./site
