--- a/.github/workflows/mk_docs.yml
+++ b/.github/workflows/mk_docs.yml
@@ -25,6 +25,7 @@ jobs:
     - run: pip install glob2
     - run: pip install urllib3
     - run: pip install beautifulsoup4
+    - run: ls
     - name: execute py script # run the run.py to get the latest data
       run: |
          python mk_docs.py
