--- a/.github/workflows/mk_docs.yml
+++ b/.github/workflows/mk_docs.yml
@@ -30,9 +30,9 @@ jobs:
 #      with:
 #        github_token: ${{ secrets.GITHUB_TOKEN }}
 #        repository:  simplesamlphp/simplesamlphp.github.io 
-#    - name: Deploy
-#      uses: peaceiris/actions-gh-pages@v3
-#      with:
+    - name: Deploy
+      uses: peaceiris/actions-gh-pages@v3
+      with:
 #        github_token: ${{ secrets.GITHUB_TOKEN }}
 #        repository:  simplesamlphp/simplesamlphp.github.io 
-#        publish_dir: ./_site
+        publish_dir: ./_site
