--- a/.github/workflows/mk_docs.yml
+++ b/.github/workflows/mk_docs.yml
@@ -18,10 +18,10 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: 3.8 #install the python needed
-    - run: pip install markdown
-    - run: pip install glob2
-    - run: pip install urllib3
-    - run: pip install beautifulsoup4
+    - run: pip install markdown glob2 urllib3 beautifulsoup4
+#    - run: pip install glob2
+#    - run: pip install urllib3
+#    - run: pip install beautifulsoup4
     - name: execute py script # run the run.py to get the latest data
       run: |
          python mk_docs.py
