--- a/.github/workflows/mk_docs.yml
+++ b/.github/workflows/mk_docs.yml
@@ -23,7 +23,7 @@ jobs:
       with:
         python-version: 3.8 #install the python needed
 
-    - run: pip install markdown glob2 urllib3 beautifulsoup4
+    - run: pip install markdown glob2 urllib3 beautifulsoup4 Pygments
 
     - name: execute py script # run the run.py to get the latest data
       run: |
